[gd_scene load_steps=20 format=3 uid="uid://t01rjtuo78re"]

[ext_resource type="Script" uid="uid://d2rfj3a7qbbfi" path="res://scripts/player.gd" id="1_dqkch"]
[ext_resource type="Texture2D" uid="uid://d2cau8wj4usn0" path="res://assets/Larry_No_Background.png" id="2_g2els"]
[ext_resource type="AudioStream" uid="uid://dg1l7jaewc66x" path="res://assets/Sounds/Jump4.wav" id="3_qhqgy"]
[ext_resource type="AudioStream" uid="uid://d3iwav5mtqwoe" path="res://assets/Sounds/Jump5.wav" id="4_dqkch"]
[ext_resource type="AudioStream" uid="uid://cuj6k3ykmq5tv" path="res://assets/Sounds/Random18.wav" id="5_qlg0r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("2_g2els")
region = Rect2(0, 529, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("2_g2els")
region = Rect2(32, 529, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("2_g2els")
region = Rect2(0, 693, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("2_g2els")
region = Rect2(32, 693, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("2_g2els")
region = Rect2(0, 561, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("2_g2els")
region = Rect2(0, 626, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("2_g2els")
region = Rect2(32, 626, 32, 31)

[sub_resource type="SpriteFrames" id="SpriteFrames_dqkch"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}],
"loop": true,
"name": &"jump",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}],
"loop": false,
"name": &"slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3vyb7"]
radius = 11.0

[sub_resource type="Animation" id="Animation_qlg0r"]
resource_name = "spin"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_tuyoq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fjrip"]
_data = {
&"RESET": SubResource("Animation_tuyoq"),
&"spin": SubResource("Animation_qlg0r")
}

[sub_resource type="Animation" id="Animation_fjrip"]
resource_name = "squash"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_smehm"]
_data = {
&"squash": SubResource("Animation_fjrip")
}

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
script = ExtResource("1_dqkch")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_dqkch")
animation = &"walk"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 4)
shape = SubResource("CircleShape2D_3vyb7")

[node name="dashTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="dashEffectTimer" type="Timer" parent="."]

[node name="dashCD" type="Timer" parent="."]

[node name="JumpSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qhqgy")

[node name="doubleJumpSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_dqkch")

[node name="DashSFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 8)
stream = ExtResource("5_qlg0r")

[node name="spin" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fjrip")
}

[node name="squash" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_smehm")
}

[connection signal="timeout" from="dashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="dashCD" to="." method="_on_dash_cd_timeout"]
